tests/invalid/type/modules/NoProto.pts
function helper() : int {
    return 1;
}
